Fix 403 Forbidden error - improve CORS headers and JWT token logging